Solving some bugs in ConjectureCollatz

--- a/ConjectureCollatz/Makefile
+++ b/ConjectureCollatz/Makefile
@@ -1,2 +1,6 @@
 run:
-	time NUMBER=1000000 python collatz.py
+	@time NUMBER=1000000 python "`pwd`/collatz.py"
+
+test:
+	@find . -name '*.pyc' -delete
+	@python -m unittest discover
